--- a/talk/index.html
+++ b/talk/index.html
@@ -40,62 +40,68 @@
         </section>
 
         <section>
-          <h2>whoami</h2>
+          <section>
+            <h1>Intro</h1>
+          </section>
 
-          <ul>
-            <li class="fragment">Founder / CTO at Juristat</li>
-            <li class="fragment">Founding memeber of Arch Reactor Hackerspace</li>
-            <li class="fragment">Co-organizer of the STL2600 / DC314 meetup</li>
-            <li class="fragment">Gave a talk last year called Going Commando</li>
-          </ul>
-        </section>
+          <section>
+            <h2>whoami</h2>
 
-        <section>
-          <h2>Why am I talking to you?</h2>
-
-          <ul>
-            <li class="fragment">REST is Terrible</li>
-            <li class="fragment">GraphQL is Better</li>
-          </ul>
-
-          <aside class="notes">
             <ul>
-              <li>I'm going to convince you to switch to GraphQL</li>
+              <li class="fragment">Founder / CTO at Juristat</li>
+              <li class="fragment">Founding memeber of Arch Reactor Hackerspace</li>
+              <li class="fragment">Co-organizer of the STL2600 / DC314 meetup</li>
+              <li class="fragment">Gave a talk last year called Going Commando</li>
             </ul>
-          </aside>
-        </section>
+          </section>
 
-        <section>
-          <h2>Why should you listen to me?</h2>
+          <section>
+            <h2>Why am I talking to you?</h2>
 
-          <ul>
-            <li class="fragment">Juristat runs on GraphQL</li>
-            <li class="fragment">Multi-database API</li>
-            <li class="fragment">Very complex data</li>
-          </ul>
-
-          <aside class="notes">
             <ul>
-              <li>The single API combines and provides data from several different databases and data stores</li>
-              <li>Our data model is very complex</li>
-              <li>Used to power the best patent search tool in the business</li>
+              <li class="fragment">REST is Terrible</li>
+              <li class="fragment">GraphQL is Better</li>
             </ul>
-          </aside>
-        </section>
 
-        <section>
-          <h2>Examples</h2>
-          <h3 class="fragment">Star Wars API</h3>
-          <ul>
-            <li class="fragment">REST - https://swapi.co/api</li>
-            <li class="fragment">GraphQL - https://graphql.org/swapi-graphql/</li>
-          </ul>
+            <aside class="notes">
+              <ul>
+                <li>I'm going to convince you to switch to GraphQL</li>
+              </ul>
+            </aside>
+          </section>
 
-          <aside class="notes">
+          <section>
+            <h2>Why should you listen to me?</h2>
+
             <ul>
-              <li>During this talk, you'll see me frequently use examples from the Star Wars API, both the REST and GraphQL versions</li>
+              <li class="fragment">Juristat runs on GraphQL</li>
+              <li class="fragment">Multi-database API</li>
+              <li class="fragment">Very complex data</li>
             </ul>
-          </aside>
+
+            <aside class="notes">
+              <ul>
+                <li>The single API combines and provides data from several different databases and data stores</li>
+                <li>Our data model is very complex</li>
+                <li>Used to power the best patent search tool in the business</li>
+              </ul>
+            </aside>
+          </section>
+
+          <section>
+            <h2>Examples</h2>
+            <h3 class="fragment">Star Wars API</h3>
+            <ul>
+              <li class="fragment">REST - https://swapi.co/api</li>
+              <li class="fragment">GraphQL - https://graphql.org/swapi-graphql/</li>
+            </ul>
+
+            <aside class="notes">
+              <ul>
+                <li>During this talk, you'll see me frequently use examples from the Star Wars API, both the REST and GraphQL versions</li>
+              </ul>
+            </aside>
+          </section>
         </section>
 
         <section>
@@ -217,7 +223,7 @@
         </section>
 
         <section>
-          <h2>Why does REST suck?</h2>
+          <h1>Why does REST suck?</h1>
           <img width="50%" src="img/meme-why-does-rest-suck.jpg" />
         </section>
 
